Fix who we are section on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1393,3 +1393,8 @@
 	margin-bottom: 5px;
 	padding-top: 60px;
 }
+
+.title-center {
+	text-align: center;
+	margin: 0;
+}
